--- a/kitty.conf
+++ b/kitty.conf
@@ -1,7 +1,7 @@
-font_family UbuntuMono Nerd Font
-bold_font UbuntuMono Nerd Font Bold
-italic_font UbuntuMono Nerd Font Italic
-bold_italic_font UbuntuMono Nerd Font Bold Italic
+font_famaly FiraMono Nerd Font
+bold_font FiraMono Nerd Font Bold
+italic_font FiraMono Nerd Font Italic
+bold_italic_font FiraMono Nerd Font Bold Italic
 
 font_size 16.0
 
