--- a/kitty.conf
+++ b/kitty.conf
@@ -1,7 +1,7 @@
 font_famaly FiraMono Nerd Font
 bold_font FiraMono Nerd Font Bold
-italic_font FiraMono Nerd Font Italic
-bold_italic_font FiraMono Nerd Font Bold Italic
+italic_font FiraMono Nerd Font Regular
+bold_italic_font FiraMono Nerd Font Bold
 
 font_size 16.0
 
