--- a/kitty.conf
+++ b/kitty.conf
@@ -3,7 +3,11 @@ bold_font Hack Nerd Font Mono Bold
 italic_font Hack Nerd Font Mono Italic
 bold_italic_font Hack Nerd Font Mono Bold Italic
 
-font_size 16.0
+include theme.conf
+# override theme background for transparency
+background #000000
+
+font_size 14.0
 
 disable_ligatures cursor
 
@@ -16,3 +20,4 @@ background_opacity 0.70
 editor nvim
 
 map ctrl+shift+f5 load_config_file
+
