--- a/theme.conf
+++ b/theme.conf
@@ -1,22 +1,22 @@
-## Glacier ##
-background #0c1115
-foreground #ffffff
-cursor #6c6c6c
-selection_background #bd2523
-color0 #2e343c
-color8 #404a55
-color1 #bd0f2f
-color9 #bd0f2f
-color2 #35a770
-color10 #49e998
-color3 #fb9435
-color11 #fddf6e
-color4 #1f5872
-color12 #2a8bc1
-color5 #bd2523
-color13 #ea4727
-color6 #778397
-color14 #a0b6d3
-color7 #ffffff
-color15 #ffffff
-selection_foreground #0c1115
+## tokyodark ##
+color0 #06080a
+color1 #ee6d85
+color2 #95c561
+color3 #d7a65f
+color4 #7199ee
+color5 #a485dd
+color6 #38a89d
+color7 #a0a8cd
+color8 #212234
+color9 #ee6d85
+color10 #95c561
+color11 #d7a65f
+color12 #7199ee
+color13 #a485dd
+color14 #38a89d
+color15 #a0a8cd
+background #11121d
+selection_foreground #11121d
+cursor #a0a8cd
+foreground #a0a8cd
+selection_background #a0a8cd
