--- a/kitty.conf
+++ b/kitty.conf
@@ -1,13 +1,13 @@
-font_famaly Hack Nerd Font Mono
-bold_font Hack Nerd Font Mono Bold
-italic_font Hack Nerd Font Mono Italic
-bold_italic_font Hack Nerd Font Mono Bold Italic
+font_family NotoSansM Nerd Font Mono
+bold_font NotoSansM Nerd Font Mono Bold
+italic_font NotoSansM Nerd Font Mono Italic
+bold_italic_font NotoSansM Nerd Font Mono Bold Italic
 
 include theme.conf
 # override theme background for transparency
 background #000000
 
-font_size 13.0
+font_size 15.0
 
 disable_ligatures cursor
 
