--- a/kitty.conf
+++ b/kitty.conf
@@ -1,13 +1,8 @@
-font_family NotoSansM Nerd Font Mono
-bold_font NotoSansM Nerd Font Mono Bold
-italic_font NotoSansM Nerd Font Mono Italic
-bold_italic_font NotoSansM Nerd Font Mono Bold Italic
-
 include theme.conf
 # override theme background for transparency
 background #000000
 
-font_size 15.0
+font_size 16.0
 
 disable_ligatures cursor
 
@@ -21,3 +16,11 @@ editor nvim
 
 map ctrl+shift+f5 load_config_file
 
+
+
+# BEGIN_KITTY_FONTS
+font_family      family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
