--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,8 @@
+font_family      family='monospace'
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
 include theme.conf
 # override theme background for transparency
 background #000000
@@ -15,12 +20,3 @@ background_opacity 0.70
 editor nvim
 
 map ctrl+shift+f5 load_config_file
-
-
-
-# BEGIN_KITTY_FONTS
-font_family      family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-# END_KITTY_FONTS
