--- a/theme.conf
+++ b/theme.conf
@@ -1,22 +1,30 @@
 ## tokyodark ##
-color0 #06080a
-color1 #ee6d85
-color2 #95c561
-color3 #d7a65f
-color4 #7199ee
-color5 #a485dd
-color6 #38a89d
-color7 #a0a8cd
-color8 #212234
-color9 #ee6d85
-color10 #95c561
-color11 #d7a65f
-color12 #7199ee
-color13 #a485dd
-color14 #38a89d
-color15 #a0a8cd
 background #11121d
 selection_foreground #11121d
 cursor #a0a8cd
 foreground #a0a8cd
 selection_background #a0a8cd
+
+color0 #06080a
+color8 #212234
+
+color1 #ff5458
+color9 #ee6d85
+
+color2 #62d196
+color10 #95c561
+
+color3 #d7a65f
+color11 #ffe9aa
+
+color4 #7199ee
+color12 #65b2ff
+
+color5 #906cff
+color13 #a485dd
+
+color6 #38a89d
+color14 #62d196
+
+color7 #565575
+color15 #a0a8cd
