tmux like keymaps

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,22 +1,44 @@
+# theme
+include theme.conf
+# overide theme background
+background #000000
+background_opacity 0.70
+
+# font
 font_family      family='monospace'
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-
-include theme.conf
-# override theme background for transparency
-background #000000
-
 font_size 16.0
-
 disable_ligatures cursor
 
+# mouse
 wheel_scroll_multiplier 1.0
 
+# cursor
 cursor_blink_interval -1
 
-background_opacity 0.70
-
+# editor
 editor nvim
 
-map ctrl+shift+f5 load_config_file
+#############
+## keymaps ##
+#############
+
+# reload
+map ctrl+space>f5 load_config_file
+
+# create tab
+map ctrl+space>c new_tab_with_cwd
+## create window ##
+# split right
+map ctrl+space>% launch --location=vsplit
+# split down
+map ctrl+space>? launch --location=hsplit
+
+# window movement
+map ctrl+space>h move_window left
+map ctrl+space>j move_window bottom
+map ctrl+space>k move_window top
+map ctrl+space>l move_window right
+
