--- a/kitty.conf
+++ b/kitty.conf
@@ -34,7 +34,7 @@ map ctrl+space>c new_tab_with_cwd
 # split right
 map ctrl+space>% launch --location=vsplit
 # split down
-map ctrl+space>? launch --location=hsplit
+map ctrl+space>" launch --location=hsplit
 
 # window movement
 map ctrl+space>h move_window left
