--- a/kitty.conf
+++ b/kitty.conf
@@ -37,8 +37,14 @@ map ctrl+space>% launch --location=vsplit
 map ctrl+space>" launch --location=hsplit
 
 # window movement
-map ctrl+space>h move_window left
-map ctrl+space>j move_window bottom
-map ctrl+space>k move_window top
-map ctrl+space>l move_window right
+map ctrl+space>shift+h move_window left
+map ctrl+space>shift+j move_window bottom
+map ctrl+space>shift+k move_window top
+map ctrl+space>shift+l move_window right
 
+
+# window focus
+map ctrl+space>h neighboring_window left
+map ctrl+space>j neighboring_window bottom
+map ctrl+space>k neighboring_window top
+map ctrl+space>l neighboring_window right
