--- a/kitty.conf
+++ b/kitty.conf
@@ -1,9 +1,4 @@
-# theme
-include theme.conf
-# overide theme background
-background #000000
-background_opacity 0.70
-
+# vim:ft=kitty
 # font
 font_family      family='monospace'
 bold_font        auto
@@ -12,39 +7,16 @@ bold_italic_font auto
 font_size 16.0
 disable_ligatures cursor
 
-# mouse
+# general options
 wheel_scroll_multiplier 1.0
-
-# cursor
 cursor_blink_interval -1
-
-# editor
 editor nvim
 
-#############
-## keymaps ##
-#############
+# keymaps
+include keymaps.conf
 
-# reload
-map ctrl+space>f5 load_config_file
-
-# create tab
-map ctrl+space>c new_tab_with_cwd
-## create window ##
-# split right
-map ctrl+space>% launch --location=vsplit
-# split down
-map ctrl+space>" launch --location=hsplit
-
-# window movement
-map ctrl+space>shift+h move_window left
-map ctrl+space>shift+j move_window bottom
-map ctrl+space>shift+k move_window top
-map ctrl+space>shift+l move_window right
-
-
-# window focus
-map ctrl+space>h neighboring_window left
-map ctrl+space>j neighboring_window bottom
-map ctrl+space>k neighboring_window top
-map ctrl+space>l neighboring_window right
+# theme
+include theme.conf
+# overide theme background
+background #000000
+background_opacity 0.70
