more maps and colors

--- a/theme.conf
+++ b/theme.conf
@@ -4,6 +4,8 @@ selection_foreground #11121d
 cursor #a0a8cd
 foreground #a0a8cd
 selection_background #a0a8cd
+active_border_color #ff5458
+inactive_border_color #a0a8cd
 
 color0 #06080a
 color8 #212234
@@ -28,3 +30,5 @@ color14 #62d196
 
 color7 #565575
 color15 #a0a8cd
+
+include ~/.cache/wal/colors-kitty.conf
