--- a/keymaps.conf
+++ b/keymaps.conf
@@ -1,23 +1,32 @@
 # reload
 map ctrl+space>f5 load_config_file
+map ctrl+space>r load_config_file
 
 # create tab
 map ctrl+space>c new_tab_with_cwd
 ## create window ##
 # split right
-map ctrl+space>% launch --location=vsplit
+map ctrl+space>% launch --location=vsplit --cwd=current
 # split down
-map ctrl+space>" launch --location=hsplit
+map ctrl+space>" launch --location=hsplit --cwd=current
 
 # window movement
-map ctrl+space>shift+h move_window left
-map ctrl+space>shift+j move_window bottom
-map ctrl+space>shift+k move_window top
-map ctrl+space>shift+l move_window right
+map ctrl+space>h move_window left
+map ctrl+space>j move_window bottom
+map ctrl+space>k move_window top
+map ctrl+space>l move_window right
 
 
 # window focus
-map ctrl+space>h neighboring_window left
-map ctrl+space>j neighboring_window bottom
-map ctrl+space>k neighboring_window top
-map ctrl+space>l neighboring_window right
+map ctrl+h neighboring_window left
+map ctrl+j neighboring_window bottom
+map ctrl+k neighboring_window top
+map ctrl+l neighboring_window right
+
+# resize windows
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter 3
+# reset all windows in the tab to default sizes
+map ctrl+home resize_window reset
