--- a/kitty.conf
+++ b/kitty.conf
@@ -11,6 +11,7 @@ disable_ligatures cursor
 wheel_scroll_multiplier 1.0
 cursor_blink_interval -1
 editor nvim
+enabled_layouts splits:split_axis=horizontal
 
 # keymaps
 include keymaps.conf
