better resize maps

--- a/keymaps.conf
+++ b/keymaps.conf
@@ -24,9 +24,9 @@ map ctrl+k neighboring_window top
 map ctrl+l neighboring_window right
 
 # resize windows
-map ctrl+left resize_window narrower
-map ctrl+right resize_window wider
-map ctrl+up resize_window taller
-map ctrl+down resize_window shorter 3
+map ctrl+shift+left resize_window narrower
+map ctrl+shift+right resize_window wider
+map ctrl+shift+up resize_window taller
+map ctrl+shift+down resize_window shorter 3
 # reset all windows in the tab to default sizes
-map ctrl+home resize_window reset
+map ctrl+shift+home resize_window reset
