--- a/kitty.conf
+++ b/kitty.conf
@@ -12,6 +12,7 @@ wheel_scroll_multiplier 1.0
 cursor_blink_interval -1
 editor nvim
 enabled_layouts splits:split_axis=horizontal
+allow_remote_control yes
 
 # keymaps
 include keymaps.conf
